<resources>
    <string name="app_name">KoKaiByWGO</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_text"> ก.ไก่ โดย WGO</string>

    <string name="please_wait">Please Wait ...</string>
    <string name="please_click_back_again_to_exit">Click again to exit</string>
    <!--Lesson-->

    <string name="btn_menu_alphabets">Alphabets</string>
    <string name="btn_menu_vowels">Vowels</string>
    <string name="btn_menu_sounds">Sounds</string>
    <string name="btn_menu_reading">Reading</string>
    <string name="title_activity_learn_alphabets">เรียนตัวอักษรไทย</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Quiz-->
    <string name="vowel_quiz_title">เลือกคำตอบที่ถูกต้อง</string>
    <string name="image">image</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>

    <string name="play_again">Play Again</string>
    <string name="go_to_home">Home</string>
    <string name="go_back">GoBack</string>
    <string name="go_next">GoNext</string>
    <string name="play">Play</string>

    <!--ACTIVITY / FRAGMENT HEADER-->
    <string name="fragment_header_level">LEVEL</string>
    <string name="activity_header_chapter">CHAPTER</string>
    <string name="activity_header_section">SECTION</string>
    <string name="activity_header_sentence">SENTENCE</string>

    <!--Fragment-->
    <string name="action_bar_level">Levels</string>
    <string name="action_bar_chapter">บทเรียน</string>

    <string name="no_item_found">ไม่พบข้อมูล</string>

    <string name="menu_main_home">เทียบเสียง</string>
    <string name="menu_main_lesson">บทเรียน</string>
    <string name="menu_main_quiz">แบบทดสอบ</string>
    <string name="menu_main_setting">ช่วยเหลือ</string>

    <string name="menu_learn_alphabet">ตัวอักษรไทย</string>
    <string name="menu_quiz_alphabet">แบบทดสอบตัวอักษรไทย</string>
    <string name="menu_learn_vowel">สระไทย</string>
    <string name="menu_quiz_vowel">แบบทดสอบสระไทย</string>
    <string name="menu_alphabet_and_vowel">ตัวอักษรและสระไทย</string>
    <string name="menu_sound_height">เสียงสูง</string>
    <string name="menu_sound_middle">เสียงกลาง</string>
    <string name="menu_sound_low">เสียงต่ำ</string>
    <string name="quiz_prefix">ทดสอบ</string>
    <!--Speech-->
    <string name="speech_title">พิมพ์ประโยคที่ต้องการออกเสียง</string>
    <string name="speech_place_holder">พิมพ์ประโยค ..</string>
    <string name="speech_submit_button">กดฟังเสียง</string>


</resources>