<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.activities.alphabets.LearnAlphabetsActivity">

    <!--START TOOLBAR-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

        <com.wgoweb.kokaibywgo.utils.MSPTextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text= "@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size" />
    </androidx.appcompat.widget.Toolbar>
    <!--END TOOLBAR-->
    <!--START-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        >

        <!-- START BODY -->
        <ImageView
            android:id="@+id/iv_alphabet"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"
            android:src="@drawable/alphabet_01"
            android:paddingTop="5dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            >

            <ImageButton
                android:id="@+id/btn_previous_alphabet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:background="@color/colorWhite"
                android:contentDescription="@string/go_back"
                />
            <ImageButton
                android:id="@+id/btn_replay_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_again"
                android:background="@color/colorWhite"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:contentDescription="@string/play"
                />
            <ImageButton
                android:id="@+id/btn_next_alphabet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:background="@color/colorWhite"
                android:contentDescription="@string/go_next"
                />

        </LinearLayout>

        <!-- END BODY -->
    </LinearLayout>

    <!--END-->

</LinearLayout>