<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_green"
    tools:context=".ui.fragments.LessonsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="-15dp"
        android:paddingRight="-15dp"
        >
        <com.wgoweb.kokaibywgo.utils.MSPTextViewBold
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_menu_height"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/menu_main_quiz"
            />

        <com.wgoweb.kokaibywgo.utils.MSPButton
            android:id="@+id/btn_menu_quiz_alphabets"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_menu_level_height"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/menu_quiz_alphabet"
            android:textColor="@color/button_text_menu_color"
            android:textSize="25dp"
            android:background="@drawable/menu_bar_blue"
            />
        <com.wgoweb.kokaibywgo.utils.MSPButton
            android:id="@+id/btn_menu_quiz_vowels"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_menu_level_height"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/menu_quiz_vowel"
            android:textColor="@color/button_text_menu_color"
            android:textSize="25dp"
            android:background="@drawable/menu_bar_blue"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_view_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_no_items_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/no_item_found"
            android:textAlignment="center"
            android:textSize="@dimen/no_item_found_textSize" />


    </LinearLayout>



</FrameLayout>