<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.learn.LearnVowelsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:paddingBottom="60dp"
        >
        <!--START TOOLBAR-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_custom"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent">

            <com.wgoweb.kokaibywgo.utils.MSPTextViewBold
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/toolbar_title_paddingStart"
                android:paddingEnd="0dp"
                android:text= "@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/toolbar_title_text_size" />

        </androidx.appcompat.widget.Toolbar>
        <!--END TOOLBAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:id="@+id/iv_vowel"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                android:src="@drawable/sara_01"
                android:paddingTop="5dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        >

        <ImageButton
            android:id="@+id/btn_previous_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tts_play_back"
            android:background="@color/colorWhite"
            android:contentDescription="@string/go_back"
            />
        <ImageButton
            android:id="@+id/btn_pause_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tts_pause"
            android:background="@color/colorWhite"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/play"
            />
        <ImageButton
            android:id="@+id/btn_auto_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tts_auto_play"
            android:background="@color/colorWhite"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/play"
            />
        <ImageButton
            android:id="@+id/btn_next_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tts_play_next"
            android:background="@color/colorWhite"
            android:contentDescription="@string/go_next"
            />

    </LinearLayout>

</RelativeLayout >
