<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.sounds.AlphabetBySoundActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--START TOOLBAR-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_custom"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent">

            <com.wgoweb.kokaibywgo.utils.MSPTextViewBold
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/toolbar_title_paddingStart"
                android:paddingEnd="0dp"
                android:text= "@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/toolbar_title_text_size" />

        </androidx.appcompat.widget.Toolbar>
        <!--END TOOLBAR-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginBottom="50dp"
        >

        <!--include_alphabet_recyclerview" /-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

                <com.wgoweb.kokaibywgo.utils.MSPTextViewBold
                    android:id="@+id/activity_title"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:paddingLeft="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/menu_learn_alphabet" />


                <ImageButton
                    android:id="@+id/btn_play_alphabet_sound"
                    android:layout_width="@dimen/btn_menu_icon_width"
                    android:layout_height="@dimen/btn_menu_icon_height"
                    android:background="@android:color/transparent"
                    android:contentDescription="Go next"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/sound_on"
                    android:scaleType="fitXY"/>
                <ImageView
                    android:id="@+id/btn_menu_all_alphabets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/button_tool_bar_grid"
                    />
            </LinearLayout>
            <com.wgoweb.kokaibywgo.utils.MSPTextViewBold
                android:id="@+id/tv_alphabet_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/menu_main_home"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_alphabet_data_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_alphabet_no_items_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="EMPTY DATA"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
        <!--include_vowel_recyclerview" /-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vowel_data_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"/>

    </LinearLayout>

    </LinearLayout>

    <!--BOTTOM BUTTONS-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        >

        <ImageButton
            android:id="@+id/btn_previous_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tts_play_back"
            android:background="@color/colorWhite"
            android:contentDescription="@string/go_back"
            android:layout_marginRight="200dp"
            />

        <ImageButton
            android:id="@+id/btn_next_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tts_play_next"
            android:background="@color/colorWhite"
            android:contentDescription="@string/go_next"
            />

    </LinearLayout>
    <!--BOTTOM BUTTONS-->

</RelativeLayout>